--- a/AutomatAis3Full/Config/App.config
+++ b/AutomatAis3Full/Config/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -11,12 +12,14 @@
     <add name="BulkCopyXml" connectionString="provider=SQLOLEDB;data source=77068-APP065;database=Automation;integrated security=SSPI" />
   </connectionStrings>
   <appSettings>
+    <add key="FullPathAis3" value="C:\Program Files (x86)\Ais3Prom\Client\CommonComponents.UnifiedClient.exe"/>
     <add key="Ifns" value="7751" /><!--ИФНС для выборок-->
     <add key="Help" value="Help\AutomateAis3Full.pdf" /><!--Помощь пользователю-->
     <add key="HostNameService" value="77068-APP065" /><!--Host моделей api-->
     <add key="ServiceModelInventory" value="http://77068-APP065:8181/ServiceRest/GetServiceApi" /><!--Сервис загрузки моделей сервиса отчетов-->
     <add key="ServiceGetOrPost" value="http://77068-APP065:8050/ServiceAutomation/LoadModelPreCheck" /><!--Адрес сервиса Володи http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais для получения данных Адрес сервиса мой http://localhost:8050/ServiceAutomation/LoadModelPreCheck-->
     <add key="AllTemplate" value="http://77068-APP065:8050/ServiceAutomation/LoadAllTemplateDb" /><!--Шаблоны для загрузки моделей шаблонов для автомата-->
+    <add key="AllUserScan" value="http://77068-APP065:8050/ServiceAutomation/SelectUserScan"/><!--Пользователи Ретро-сканированиея-->
     <add key="AllListModel" value="XmlFile/AutoGenerateSchemes.xml" /><!--Новая схема генерации все списки в одной модели КРУТО-->
     <add key="FileFid" value="XmlFile/Fid.xml" /><!--Путь к файлу ФИД по схеме FidZemlyOrImushestvo.xsd-->
     <add key="FileInn" value="XmlFile/Inn.xml" /><!--Путь к файлу ИНН по схеме SnuOneForm.xsd-->
@@ -72,4 +75,13 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="file" xsi:type="File" fileName="Log/nlog.log" layout="${date}|${level}|${message}" />
+    </targets>
+    <rules>
+      <logger name="*" minlevel="Debug" writeTo="file" />
+      <logger name="*" minlevel="Error" writeTo="file" />
+    </rules>
+  </nlog>
 </configuration>
