--- a/LibaryAIS3Windows.Tests/packages.config
+++ b/LibaryAIS3Windows.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoItX.Dotnet" version="3.3.14.5" targetFramework="net452" />
+  <package id="InputSimulator" version="1.0.4.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.WindowsRuntime" version="4.6.0" targetFramework="net472" />
   <package id="System.Runtime.WindowsRuntime.UI.Xaml" version="4.6.0" targetFramework="net472" />
