--- a/EfDatabaseAutomation/EfDatabaseAutomation.csproj
+++ b/EfDatabaseAutomation/EfDatabaseAutomation.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Automation\BaseLogica\ActiveDirectory\ActiveDirectorySelectModel.cs" />
     <Compile Include="Automation\BaseLogica\AddObjectDb\AddObjectDb.cs" />
     <Compile Include="Automation\BaseLogica\AutoLogicInventory\InventoryLogic.cs" />
     <Compile Include="Automation\BaseLogica\AutoLogicInventory\ListModelSelect.cs" />
