--- a/AutomatAis3Full/Config/App.config
+++ b/AutomatAis3Full/Config/App.config
@@ -12,14 +12,14 @@
     <add name="BulkCopyXml" connectionString="provider=SQLOLEDB;data source=77068-APP065;database=Automation;integrated security=SSPI" />
   </connectionStrings>
   <appSettings>
-    <add key="FullPathAis3" value="C:\Program Files (x86)\Ais3Prom\Client\CommonComponents.UnifiedClient.exe"/>
+    <add key="FullPathAis3" value="C:\Program Files (x86)\Ais3Prom\Client\CommonComponents.UnifiedClient.exe" />
     <add key="Ifns" value="7751" /><!--ИФНС для выборок-->
     <add key="Help" value="Help\AutomateAis3Full.pdf" /><!--Помощь пользователю-->
     <add key="HostNameService" value="77068-APP065" /><!--Host моделей api-->
     <add key="ServiceModelInventory" value="http://77068-APP065:8181/ServiceRest/GetServiceApi" /><!--Сервис загрузки моделей сервиса отчетов-->
     <add key="ServiceGetOrPost" value="http://77068-APP065:8050/ServiceAutomation/LoadModelPreCheck" /><!--Адрес сервиса Володи http://i7751-app196.regions.tax.nalog.ru/DataInterchange/api/Ais для получения данных Адрес сервиса мой http://localhost:8050/ServiceAutomation/LoadModelPreCheck-->
     <add key="AllTemplate" value="http://77068-APP065:8050/ServiceAutomation/LoadAllTemplateDb" /><!--Шаблоны для загрузки моделей шаблонов для автомата-->
-    <add key="AllUserScan" value="http://77068-APP065:8050/ServiceAutomation/SelectUserScan"/><!--Пользователи Ретро-сканированиея-->
+    <add key="AllUserScan" value="http://77068-APP065:8050/ServiceAutomation/SelectUserScan" /><!--Пользователи Ретро-сканированиея-->
     <add key="AllListModel" value="XmlFile/AutoGenerateSchemes.xml" /><!--Новая схема генерации все списки в одной модели КРУТО-->
     <add key="FileFid" value="XmlFile/Fid.xml" /><!--Путь к файлу ФИД по схеме FidZemlyOrImushestvo.xsd-->
     <add key="FileInn" value="XmlFile/Inn.xml" /><!--Путь к файлу ИНН по схеме SnuOneForm.xsd-->
@@ -62,6 +62,18 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="CommonServiceLocator" publicKeyToken="489b6accfaf20ef0" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.6.0" newVersion="2.0.6.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Windows.Interactivity" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Practices.ServiceLocation" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
